tests/files/flow_controller_tests/should_run/093.cmdr
x = 1;
print arccos(x);