tests/files/flow_controller_tests/should_fail/082.cmdr
x = true;
print arccos(x);